# CPT-to-soiltype

./: LICENSE  pyproject.toml
